OrTex/OrTex/OrTexParser.py
# Generated from .\OrTex\OrTex.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class OrTexParser ( Parser ):

    grammarFileName = "OrTex.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'if'", "'('", "')'", "'else'", 
                     "'while'", "'for'", "','", "'*'", "'+'", "'-'", "'func'", 
                     "'->'", "'='", "'.'", "'new'", "'class'", "'{'", "'}'", 
                     "'constr'", "'!'", "'/'", "'%'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'['", "']'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOL_OPERATOR", "INTEGER", "DOUBLE", "STRING", "BOOL", 
                      "NULL", "COMMENT", "WS", "IDENTIFIER" ]

    RULE_program = 0
    RULE_line = 1
    RULE_statement = 2
    RULE_ifStatement = 3
    RULE_elseIfStatement = 4
    RULE_whileStatement = 5
    RULE_forStatement = 6
    RULE_funDef = 7
    RULE_funDefReturn = 8
    RULE_parameters = 9
    RULE_assignment = 10
    RULE_varDefinition = 11
    RULE_functionCall = 12
    RULE_objectFunctionCall = 13
    RULE_objectFunctionCallFromFunction = 14
    RULE_objectCreationCall = 15
    RULE_classDef = 16
    RULE_classConstructor = 17
    RULE_classMethodDef = 18
    RULE_classQuestion = 19
    RULE_classMethodCall = 20
    RULE_classMethodCallFromMethod = 21
    RULE_inplaceQuestion = 22
    RULE_expression = 23
    RULE_multOp = 24
    RULE_addOp = 25
    RULE_compareOp = 26
    RULE_boolOp = 27
    RULE_constant = 28
    RULE_block = 29
    RULE_scope = 30

    ruleNames =  [ "program", "line", "statement", "ifStatement", "elseIfStatement", 
                   "whileStatement", "forStatement", "funDef", "funDefReturn", 
                   "parameters", "assignment", "varDefinition", "functionCall", 
                   "objectFunctionCall", "objectFunctionCallFromFunction", 
                   "objectCreationCall", "classDef", "classConstructor", 
                   "classMethodDef", "classQuestion", "classMethodCall", 
                   "classMethodCallFromMethod", "inplaceQuestion", "expression", 
                   "multOp", "addOp", "compareOp", "boolOp", "constant", 
                   "block", "scope" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    BOOL_OPERATOR=32
    INTEGER=33
    DOUBLE=34
    STRING=35
    BOOL=36
    NULL=37
    COMMENT=38
    WS=39
    IDENTIFIER=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OrTexParser.EOF, 0)

        def funDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrTexParser.FunDefContext)
            else:
                return self.getTypedRuleContext(OrTexParser.FunDefContext,i)


        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrTexParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(OrTexParser.ClassDefContext,i)


        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(OrTexParser.COMMENT)
            else:
                return self.getToken(OrTexParser.COMMENT, i)

        def getRuleIndex(self):
            return OrTexParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = OrTexParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << OrTexParser.T__11) | (1 << OrTexParser.T__16) | (1 << OrTexParser.COMMENT))) != 0):
                self.state = 65
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [OrTexParser.T__11]:
                    self.state = 62
                    self.funDef()
                    pass
                elif token in [OrTexParser.T__16]:
                    self.state = 63
                    self.classDef()
                    pass
                elif token in [OrTexParser.COMMENT]:
                    self.state = 64
                    self.match(OrTexParser.COMMENT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(OrTexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(OrTexParser.StatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(OrTexParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(OrTexParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(OrTexParser.ForStatementContext,0)


        def scope(self):
            return self.getTypedRuleContext(OrTexParser.ScopeContext,0)


        def COMMENT(self):
            return self.getToken(OrTexParser.COMMENT, 0)

        def getRuleIndex(self):
            return OrTexParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = OrTexParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OrTexParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.statement()
                pass
            elif token in [OrTexParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.ifStatement()
                pass
            elif token in [OrTexParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.whileStatement()
                pass
            elif token in [OrTexParser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.forStatement()
                pass
            elif token in [OrTexParser.T__29]:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.scope()
                pass
            elif token in [OrTexParser.COMMENT]:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.match(OrTexParser.COMMENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDefinition(self):
            return self.getTypedRuleContext(OrTexParser.VarDefinitionContext,0)


        def assignment(self):
            return self.getTypedRuleContext(OrTexParser.AssignmentContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(OrTexParser.FunctionCallContext,0)


        def objectFunctionCall(self):
            return self.getTypedRuleContext(OrTexParser.ObjectFunctionCallContext,0)


        def classMethodCall(self):
            return self.getTypedRuleContext(OrTexParser.ClassMethodCallContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = OrTexParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 80
                self.varDefinition()
                pass

            elif la_ == 2:
                self.state = 81
                self.assignment()
                pass

            elif la_ == 3:
                self.state = 82
                self.functionCall()
                pass

            elif la_ == 4:
                self.state = 83
                self.objectFunctionCall()
                pass

            elif la_ == 5:
                self.state = 84
                self.classMethodCall()
                pass


            self.state = 87
            self.match(OrTexParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(OrTexParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(OrTexParser.BlockContext,0)


        def elseIfStatement(self):
            return self.getTypedRuleContext(OrTexParser.ElseIfStatementContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = OrTexParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(OrTexParser.T__1)
            self.state = 90
            self.match(OrTexParser.T__2)
            self.state = 91
            self.expression(0)
            self.state = 92
            self.match(OrTexParser.T__3)
            self.state = 93
            self.block()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==OrTexParser.T__4:
                self.state = 94
                self.match(OrTexParser.T__4)
                self.state = 95
                self.elseIfStatement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseIfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(OrTexParser.BlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(OrTexParser.IfStatementContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_elseIfStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseIfStatement" ):
                listener.enterElseIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseIfStatement" ):
                listener.exitElseIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseIfStatement" ):
                return visitor.visitElseIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def elseIfStatement(self):

        localctx = OrTexParser.ElseIfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elseIfStatement)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OrTexParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.block()
                pass
            elif token in [OrTexParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.ifStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(OrTexParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(OrTexParser.BlockContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = OrTexParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(OrTexParser.T__5)
            self.state = 103
            self.match(OrTexParser.T__2)
            self.state = 104
            self.expression(0)
            self.state = 105
            self.match(OrTexParser.T__3)
            self.state = 106
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(OrTexParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(OrTexParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(OrTexParser.BlockContext,0)


        def IDENTIFIER(self):
            return self.getToken(OrTexParser.IDENTIFIER, 0)

        def INTEGER(self):
            return self.getToken(OrTexParser.INTEGER, 0)

        def getRuleIndex(self):
            return OrTexParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = OrTexParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(OrTexParser.T__6)
            self.state = 109
            self.match(OrTexParser.T__2)
            self.state = 110
            self.assignment()
            self.state = 111
            self.match(OrTexParser.T__7)
            self.state = 112
            self.expression(0)
            self.state = 113
            self.match(OrTexParser.T__7)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << OrTexParser.T__8) | (1 << OrTexParser.T__9) | (1 << OrTexParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 115
            _la = self._input.LA(1)
            if not(_la==OrTexParser.INTEGER or _la==OrTexParser.IDENTIFIER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 116
            self.match(OrTexParser.T__3)
            self.state = 117
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OrTexParser.IDENTIFIER, 0)

        def parameters(self):
            return self.getTypedRuleContext(OrTexParser.ParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(OrTexParser.BlockContext,0)


        def funDefReturn(self):
            return self.getTypedRuleContext(OrTexParser.FunDefReturnContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_funDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDef" ):
                listener.enterFunDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDef" ):
                listener.exitFunDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDef" ):
                return visitor.visitFunDef(self)
            else:
                return visitor.visitChildren(self)




    def funDef(self):

        localctx = OrTexParser.FunDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(OrTexParser.T__11)
            self.state = 120
            self.match(OrTexParser.IDENTIFIER)
            self.state = 121
            self.match(OrTexParser.T__2)
            self.state = 122
            self.parameters()
            self.state = 123
            self.match(OrTexParser.T__3)
            self.state = 124
            self.block()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==OrTexParser.T__12:
                self.state = 125
                self.funDefReturn()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDefReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OrTexParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return OrTexParser.RULE_funDefReturn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDefReturn" ):
                listener.enterFunDefReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDefReturn" ):
                listener.exitFunDefReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDefReturn" ):
                return visitor.visitFunDefReturn(self)
            else:
                return visitor.visitChildren(self)




    def funDefReturn(self):

        localctx = OrTexParser.FunDefReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funDefReturn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(OrTexParser.T__12)
            self.state = 129
            self.match(OrTexParser.IDENTIFIER)
            self.state = 130
            self.match(OrTexParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OrTexParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OrTexParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OrTexParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = OrTexParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << OrTexParser.T__2) | (1 << OrTexParser.T__15) | (1 << OrTexParser.T__20) | (1 << OrTexParser.INTEGER) | (1 << OrTexParser.DOUBLE) | (1 << OrTexParser.STRING) | (1 << OrTexParser.BOOL) | (1 << OrTexParser.NULL) | (1 << OrTexParser.IDENTIFIER))) != 0):
                self.state = 132
                self.expression(0)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==OrTexParser.T__7:
                    self.state = 133
                    self.match(OrTexParser.T__7)
                    self.state = 134
                    self.expression(0)
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OrTexParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(OrTexParser.ExpressionContext,0)


        def classQuestion(self):
            return self.getTypedRuleContext(OrTexParser.ClassQuestionContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = OrTexParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(OrTexParser.IDENTIFIER)
                self.state = 143
                self.match(OrTexParser.T__13)
                self.state = 144
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.classQuestion()
                self.state = 146
                self.match(OrTexParser.T__13)
                self.state = 147
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OrTexParser.IDENTIFIER, 0)

        def classQuestion(self):
            return self.getTypedRuleContext(OrTexParser.ClassQuestionContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_varDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDefinition" ):
                listener.enterVarDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDefinition" ):
                listener.exitVarDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDefinition" ):
                return visitor.visitVarDefinition(self)
            else:
                return visitor.visitChildren(self)




    def varDefinition(self):

        localctx = OrTexParser.VarDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_varDefinition)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(OrTexParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.classQuestion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OrTexParser.IDENTIFIER, 0)

        def parameters(self):
            return self.getTypedRuleContext(OrTexParser.ParametersContext,0)


        def objectFunctionCallFromFunction(self):
            return self.getTypedRuleContext(OrTexParser.ObjectFunctionCallFromFunctionContext,0)


        def getRuleIndex(self):
            return OrTexParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):
